# huawei-cpe-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: device_info.rs  network_mode.rs  reboot.rs
src/: client.rs  enums.rs  lib.rs  session.rs  tests.rs
