[package]
name = "huawei-cpe-rs"
description = "Control Huawei LTE/4G CPE routers (e.g. B528s, B818) using Rust"
authors = ["Izuna <izuna.seikatsu@ccbluex.net>"]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/1zun4/huawei-cpe-rs/"
readme = "README.md"
categories = ["api-bindings"]
keywords = ["router", "huawei", "api", "cpe", "lte"]

[dependencies]
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
async-trait = "0.1"
quick-xml = { version = "0.37", features = ["serialize"] }
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"

[features]
default = ["tls-rustls"]

# SSL support with native-tls or rustls
tls-native = ["reqwest/native-tls"]
tls-rustls = ["reqwest/rustls-tls"]
